test/negative/undefined_var.mut
# Negative: use undefined variable
print(x)
